--- a/index.html
+++ b/index.html
@@ -6,11 +6,28 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
   <canvas id="bg"></canvas>
+  <canvas id="export"></canvas>
 
   <div class="ui">
     <input id="textInput" placeholder="Skriv din text..." />
-    <button onclick="renderText()">Generera</button>
+    <br><br>
+
+    <button onclick="renderText()">Generera text</button>
+    <br><br>
+
+    <input type="range" id="doodleSlider" min="1" max="8" value="1">
+    <p id="sliderLabel">Doodle 1</p>
+
+    <label>
+      <input type="checkbox" id="toggleBg" checked>
+      Visa doodles
+    </label>
+
+    <br><br>
+    <button onclick="exportPNG()">Export PNG</button>
+
     <h1 id="output"></h1>
   </div>
 
