--- a/index.html
+++ b/index.html
@@ -2,16 +2,19 @@
 <html lang="sv">
 <head>
   <meta charset="UTF-8">
-  <title>Graffiti Generator</title>
+  <title>Graffiti Text Generator</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <canvas id="bg"></canvas>
-  <canvas id="export"></canvas>
 
   <div class="ui">
     <input id="textInput" placeholder="Skriv din text..." />
+    <br><br>
+
+    <label>Textfärg: <input type="color" id="textColor" value="#ffffff"></label>
+    <label>Outline-färg: <input type="color" id="outlineColor" value="#000000"></label>
     <br><br>
 
     <button onclick="renderText()">Generera text</button>
@@ -27,6 +30,10 @@
 
     <br><br>
     <button onclick="exportPNG()">Export PNG</button>
+    <br><br>
+    <button onclick="location.href='editor.html'">
+      Roblox Clothing Editor
+    </button>
 
     <h1 id="output"></h1>
   </div>
