--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <input type="range" id="doodleSlider" min="1" max="8" value="1">
     <p id="sliderLabel">Doodle 1</p>
 
+    <br>
+
     <!-- Toggle bakgrund -->
     <label>
       <input type="checkbox" id="toggleBg" checked>
@@ -34,7 +36,7 @@
     <br><br>
 
     <!-- Export knapp -->
-    <button onclick="exportPNG()">Export PNG</button>
+    <button id="exportBtn">Export PNG</button>
 
     <br><br>
 
